# url-shortner

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  task-description.md
app/: main.py
app/Core/: config.py
app/Core/Settings/: AppSettings.py  BaseAppSettings.py  DatabaseSettings.py  DevAppSettings.py  DynamoDBSettings.py  ProductionAppSettings.py
app/Enums/: AppEnvEnum.py  DynamoDBEnum.py  RequestEnum.py
app/Errors/: InternalServerError.py  ItemNotFoundException.py
app/Finn/ShortLink/Controllers/: ApiShortLinkController.py
app/Finn/ShortLink/Models/: ShortLink.py
app/Middleware/: RouteErrorHandler.py
app/Routes/: router.py
app/Utils/: DynamoDB.py
scripts/: entrypoint.sh
tests/: TestEnvironment.py
tests/E2E/: ApiTest.py
tests/Unit/: ShortLinkTest.py
