[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = false

[tool.poetry]
name = "api"
version = "0.1.0"
description = "Finn URL encoder-decoder service"
authors = ["Krishna"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
faker = "16.5.0"
attrs = "22.2.0"
click = "8.1.3"
importlib-metadata = "6.0.0"
importlib-resources = "5.10.2"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
jsonschema = "4.17.3"
markupsafe = "2.1.1"
pip = "20.0.2"
pkgutil-resolve-name = "1.3.10"
pyrsistent = "0.19.3"
python-dateutil = "2.8.2"
setuptools = "45.2.0"
six = "1.16.0"
werkzeug = "2.2.2"
wheel = "0.34.2"
zipp = "3.11.0"
uvicorn = "0.17.6"
pydantic = "1.10.4"
flasgger = "0.9.5"
httpx = "0.23.3"
black = "22.12.0"
python-decouple = "3.7"
python-dotenv = "0.21.0"
fastapi = "0.89.1"
fastapi-utils = "0.2.1"
mypy = "0.991"
autoflake = "^2.0.0"
gunicorn = "^20.1.0"
pipdeptree = "^2.3.3"
toml = "^0.10.2"


[build-system]
requires = ["poetry==1.3.2"]
build-backend = "poetry.core.masonry.api"
